# zoo-keeper

./: .clang-tidy  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  MIGRATION.md  PRODUCTION_AUDIT.md  ProjectEval.md  RAG_STRATEGY.md  README.md  REFACTOR_PLAN.md  REVIEW.md  SECURITY.md  zoo-keeper-brd.md  zoo-keeper-prd.md  zoo-keeper-trd.md
.claude/rules/: agent-layer.md  core-model.md  testing.md  tools-layer.md
.github/workflows/: build_and_test.yml  ci.yml  docs.yml
LICENSES/: GoogleTest.txt
benchmarks/: CMakeLists.txt  perf_harness.cpp
cmake/: CompilerWarnings.cmake  Coverage.cmake  Crap.cmake  Doxygen.cmake  FetchDependencies.cmake  Sanitizers.cmake  ZooKeeperBuildTreeConfig.cmake.in  ZooKeeperConfig.cmake.in  ZooKeeperDependencies.cmake  ZooKeeperInstall.cmake  ZooKeeperLlama.cmake  ZooKeeperOptions.cmake  ZooKeeperPackage.cmake  ZooKeeperTargets.cmake  zoo-keeper.pc.in  zoo_clear_gcda.cmake
docs/: Doxyfile.in  LLAMA_BATCH_API_TRANSITION_PLAN.md  TOOL_CALLING_PLAN.md  architecture-refactor-task-plan-2026-05-03.md  architecture-review-2026-05-03.md  architecture.md  building.md  cleanup-roadmap.md  compatibility.md  configuration.md  context-database.md  examples.md  extract.md  getting-started.md  hub.md  maintainer-architecture.md  maintainer-cmake-packaging.md  mcp.md  performance.md  phase-abc-catchup-plan.md  phase-b-implementation-plan.md  phase-c-implementation-plan.md  phase-d-plan.md  rag.md  spec.md  tools.md
docs/adr/: 001-direct-llama-wrapper-no-abstraction.md  002-cpp23-std-expected.md  003-header-only-tools-layer.md  004-linux-macos-only.md  005-inference-thread-ownership.md  006-native-only-tool-calling.md  007-thinking-disabled-by-default.md
docs/instructions/: FUTURE_IMPROVEMENTS.md  LLAMA_CPP_B8992_MIGRATION_PLAN.md  UPDATE_LLAMA_CPP.md  UPDATE_SUBMODULE.md
docs/superpowers/plans/: 2026-03-27-concurrency-improvements.md  2026-03-31-hub-layer-hardening.md  2026-04-08-fetchcontent-llama.md
docs/superpowers/specs/: 2026-04-08-fetchcontent-llama-design.md
examples/: CMakeLists.txt  config.auto.example.json  config.example.json  custom_tool_schema.cpp  demo_chat.cpp  demo_extract.cpp  error_handling.cpp  manual_tool_schema.cpp  model_generate.cpp  stream_cancel.cpp
include/zoo/: agent.hpp  gguf_utils.hpp  log.hpp  memory_estimate.hpp  types.hpp  version.hpp.in  zoo.hpp
include/zoo/backend/: IBackend.hpp  interface.hpp  llama_backend.hpp
include/zoo/core/: batch.hpp  gguf_inspector.hpp  json.hpp  model.hpp  model_info.hpp  model_tool_calling_state.hpp  system_probe.hpp  types.hpp
include/zoo/engine/: agentic_loop.hpp  context_database.hpp  error_recovery.hpp  history_manager.hpp  rag_store.hpp  request_queue.hpp  template_engine.hpp  tool_call_parser.hpp  tool_registry.hpp
include/zoo/hub/: huggingface.hpp  inspector.hpp  store.hpp  types.hpp
include/zoo/internal/: log.hpp
include/zoo/internal/agent/: backend.hpp  callback_dispatcher.hpp  command.hpp  mailbox.hpp  request.hpp  request_slots.hpp  request_tracker.hpp  runtime.hpp  runtime_helpers.hpp  test_factory.hpp
include/zoo/internal/core/: prompt_bookkeeping.hpp  stream_filter.hpp
include/zoo/internal/tools/: grammar.hpp  interceptor.hpp  sentinel_stream_filter.hpp
include/zoo/mcp/: mcp_client.hpp  types.hpp
include/zoo/mcp/protocol/: json_rpc.hpp  message_router.hpp  session.hpp
include/zoo/mcp/transport/: itransport.hpp  stdio_transport.hpp
include/zoo/tools/: grammar.hpp  interceptor.hpp  parser.hpp  registry.hpp  types.hpp  validation.hpp
plans/: demo-chat-generic-tool-calling-follow-up.md  tool-calling-update-plan.md
scripts/: bootstrap  build  build-all  build-all.sh  build.sh  crap.sh  crap_report.py  format  format.sh  lint  lint.sh  rebuild  rebuild.sh  test.sh
src/: agent.cpp  log.hpp  log_callback.cpp
src/agent/: agent_facade.cpp  backend_model.cpp  backend_model.hpp  callback_dispatcher.hpp  command.hpp  facade.cpp  mailbox.hpp  request.hpp  request_handle.cpp  request_slots.hpp  request_state.hpp  runtime.cpp  runtime.hpp  runtime_commands.cpp  runtime_extraction.cpp  runtime_helpers.hpp  runtime_inference.cpp  runtime_lifecycle.cpp  runtime_tool_loop.cpp  tool_executor.hpp
src/backend/: llama_backend.cpp
src/core/: backend_init.hpp  batch.hpp  gguf_inspector.cpp  inference_phase.hpp  llama_backend.cpp  model.cpp  model_history.cpp  model_impl.hpp  model_inference.cpp  model_init.cpp  model_prompt.cpp  model_sampling.cpp  model_test_access.hpp  model_tool_calling.cpp  stream_filter.cpp  stream_filter.hpp  system_probe.cpp
src/hub/: download_validation.hpp  hf_cache_paths.hpp  huggingface.cpp  inspector.cpp  path_utils.hpp  store.cpp  store_internals.hpp  store_json.hpp
src/tools/: registry.cpp
tests/: CMakeLists.txt  cmake_test_discovery_4fec96d5ad.json
tests/fixtures/: mcp_messages.hpp  sample_responses.hpp  template_expectations.hpp  tool_definitions.hpp
tests/integration/: CMakeLists.txt  test_extract.cpp  test_model_agent.cpp
tests/mocks/: mock_backend.cpp  mock_backend.hpp  mock_mcp_transport.hpp
tests/packaging/cmake_consumer/: CMakeLists.txt  main.cpp
tests/packaging/fetchcontent_consumer/: CMakeLists.txt  main.cpp
tests/unit/: test_agent.cpp  test_agent_mailbox.cpp  test_agent_runtime.cpp  test_agentic_loop.cpp  test_batch.cpp  test_callback_dispatcher.cpp  test_context_database.cpp  test_error_recovery.cpp  test_extraction.cpp  test_gguf_inspector.cpp  test_grammar_builder.cpp  test_history_manager.cpp  test_hub.cpp  test_mcp_client.cpp  test_mcp_json_rpc.cpp  test_mcp_message_router.cpp  test_mcp_session.cpp  test_memory_estimate.cpp  test_model.cpp  test_model_tool_calling.cpp  test_prompt_bookkeeping.cpp  test_rag_store.cpp  test_request_queue.cpp  test_request_tracker.cpp  test_schema_grammar.cpp  test_sentinel_parser.cpp  test_sentinel_stream_filter.cpp  test_streaming_filter.cpp  test_system_probe.cpp  test_template_engine.cpp  test_token_accounting.cpp  test_tool_interceptor.cpp  test_tool_parser.cpp  test_tool_registry.cpp  test_types.cpp
